# chessQt

./: .clang-uml  .gitignore  CMakeLists.txt  Color.h  Doxyfile  IGameObserver.h  InvalidSANException.h  MoveType.h  algebraicNotationTranslator.cpp  algebraicNotationTranslator.h  bishop.cpp  bishop.h  board.cpp  board.h  boardmodel.cpp  boardmodel.h  chessEnums.h  chessboard.cpp  chessmodel.cpp  chessmodel.h  colleague.cpp  colleague.h  consolegameui.cpp  consolegameui.h  coordinate.cpp  coordinate.h  drawCause.h  game.cpp  game.h  gameStatus.h  game_client.cpp  game_client.h  game_mediator.cpp  game_mediator.h  game_state.h  gamecontroller.cpp  gamecontroller.h  grid.h  i_game_mediator.cpp  i_game_mediator.h  (+23 more)
diagrams/: console_ui.puml  core_logic.puml  gui.puml  mediator.puml
qml/: Board.qml  DialogButton.qml  GameOverDialog.qml  Main.qml  MoveList.qml  Piece.qml  PieceButton.qml  PromotionDialog.qml
